--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1>Industrial Excellence Through Quality Parts & Installation</h1>
+            <h1>Industrial Excellence Through Quality Machineries and Parts</h1>
             <p>Reliable import and professional installation of high-quality machinery for factories.</p>
             <div class="hero-cta">
                 <a href="contact.html" class="btn btn-primary">Request a Quote</a>
@@ -102,7 +102,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2 class="section-title">About US</h2>
-                    <p>With over 20 years of experience in the industrial sector, Hawkline International has established itself as a trusted partner for factories requiring high-quality mechanical parts and expert installation services.</p>
+                    <p>With over 20 years of experience in the industrial sector, Hawkline International has established itself as a trusted partner for factories requiring high-quality machineries, parts and expert installation services.</p>
                     <p>Our team of certified engineers and technicians ensures that every component we import meets international quality standards and is installed with precision and care to maximize operational efficiency and minimize downtime.</p>
                     <p>We pride ourselves on our commitment to excellence, timely delivery, and comprehensive after-sales support that keeps your production running smoothly.</p>
                 </div>
